2010-01-11  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Build fix after introduction of JS_NO_EXPORT
        
        * wx/build/settings.py:

2010-01-11  Eric Seidel  <eric@webkit.org>

        No review, rolling out r53079.
        http://trac.webkit.org/changeset/53079
        https://bugs.webkit.org/show_bug.cgi?id=33197

        Adam doens't think this actually works, and believe it caused
        a regression https://bugs.webkit.org/show_bug.cgi?id=33488 so
        rolling this out.

        * Scripts/test-webkitpy:
        * Scripts/webkitpy/commands/abstractdiffcommand.py: Removed.
        * Scripts/webkitpy/commands/abstractdiffcommand_unittest.py: Removed.
        * Scripts/webkitpy/commands/download.py:
        * Scripts/webkitpy/commands/upload.py:
        * Scripts/webkitpy/mock_bugzillatool.py:

2010-01-10  Adam Barth  <abarth@webkit.org>

        Reviewed by David Kilzer.

        bugzilla-tool submit-patch mistakenly picks up bug URLs in non-ChangeLog files
        https://bugs.webkit.org/show_bug.cgi?id=33197

        We should just search for bug numbers in the ChangeLogs instead of in
        the whole diff.
 
        * Scripts/test-webkitpy:
        * Scripts/webkitpy/commands/abstractdiffcommand.py: Added.
        * Scripts/webkitpy/commands/abstractdiffcommand_unittest.py: Added.
        * Scripts/webkitpy/commands/download.py:
        * Scripts/webkitpy/commands/upload.py:
        * Scripts/webkitpy/mock_bugzillatool.py:

2010-01-11  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by David Kilzer.

        Created a unit-tested function to parse the header block of
        a Git or SVN diff -- for future refactoring of svn-apply and
        svn-unapply.

        https://bugs.webkit.org/show_bug.cgi?id=33447

        * Scripts/VCSUtils.pm:
          - Added parseDiffHeader().
          - Removed irrelevant comment from gitdiff2svndiff().

        * Scripts/webkitperl/VCSUtils_unittest/parseDiffHeader.pl: Added.